# bytecanary

./: .gitignore  README.md  pyproject.toml
data/level0/: cjk_400.json  cjk_unseen3b.json
examples/: evaluate_model.py
src/bytecanary/: __init__.py  cli.py  config.py  decode.py  dfa.py  evaluate.py  evaluate_level1.py  utils.py
src/bytecanary/data/: cjk_4000.json
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: decode.ts  dfa.ts  evalset.ts  evaluate.ts  hf-evaluate.ts  index.ts
ts/www/: index.html
