[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bytecanary"
version = "0.1.0"
description = "UTF-8 structural validity evaluation for byte-level language models"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Sangwhan Moon", email = "innodb@gmail.com" },
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
bytecanary = "bytecanary.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bytecanary"]
